Closed Bug 70569 Opened 25 years ago Closed 25 years ago

dead code doesn't belong in tree

Categories

(Toolkit :: Form Manager, defect)

defect
Not set
normal

Tracking

()

VERIFIED FIXED

People

(Reporter: timeless, Unassigned)

Details

Attachments

(2 files)

cyeh (7 warnings) all for `void wallet_'.something.'()' defined but not used
ignore the two +'s, they're from morse warning cleanup [along w/ other elements which i redacted]. please review.
Assignee: morse → timeless
Keywords: approval, patch, review
Target Milestone: --- → mozilla0.9
addendum, zap sfraser's function 13a30,36 > -wallet_DumpAutoString(const nsString& as){ > - char s[100]; > - as.ToCString(s, sizeof(s)); > - fprintf(stdout, "%s\n", s); > -} > - > -static void
Why do you want to remove any of this code? It is all within ifdef DEBUG statements already so it is not part of the optimized build. And I frequently use these routines for finding problems.
removing myself from cc. this code probably got checked in under my name during some previous code cleaning action or during a tree fix from over a year ago. morse is the best person to review any potential fixes.
i'm cleaning out warnings and unused code. if you don't want the code deleted, would you ok my moving it into an ifdef DEBUG_morse?
Sure. That's better than deleting it.
r=morse
fix checked in. 1 module done many to go.
Status: NEW → RESOLVED
Closed: 25 years ago
Keywords: approval, review
Resolution: --- → FIXED
Verified code checked into lxr.mozilla.org
Status: RESOLVED → VERIFIED
Assignee: timeless → nobody
Product: Core → Toolkit
QA Contact: tpreston → form.manager
Target Milestone: mozilla0.9 → ---
Version: Trunk → unspecified
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: