fix bug 70569 dead code doesn't belong in tree r=morse, sr=brendan@mozilla.org